# python-protobuf-repo-example

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
example_proto/: food.proto
example_proto/dairy/: cheese.proto
proto/: animal.proto
proto/dairy/: cheese.proto
