[build-system]
# requires = ["protobuf-custom-build@git+https://github.com/sbrother/protobuf-custom-build", "setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.1"]
requires = ["protobuf-custom-build@file:///Users/sam/CairnLabs/Google/protobuf-custom-build", "setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.1", "protoletariat"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
